--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
   <title>Calculadora de Freela - He4rtDevs</title>
   <meta name="author" content="Everton Oliver" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-  <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./style/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./style/css/reset.css">
+  <link rel="stylesheet" href="./style/css/style.css"/>
 </head>
 
 <body>
