Adiciona responsividade com media querie

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <h1>Calculadora de Freelas</h1>
     <h3>Desafio desenvolvido pelo grupo <strong>He4rt Developers</strong>.
       Uma calculadora que irá te mostrar o valor da sua hora perante o freelance cotado. </h3>
-    <a href="#calc" class="scroll">Calcule</a>
+    <a href="#calc" class="scroll btn">Calcule</a>
   </section>
 
   <section id="calc" class="calculator">
